# Przed

ARKO/RISC-V/: Changing_order.asm  Duze_litery.asm  Fib.asm  Małe_litery.asm  bmp_sample.asm  cyfry.asm  delete_small_letters.asm  even_add.asm  nawiasy_kwadratowe.asm  riscv1.asm  silnia.asm  tiny_task.asm  zamiana_cyfr.asm
ARKO/RISC-V/projekt/: ProjectRisc-V.asm
ARKO/x86/Projekt_x86/: image.c  image.h.gch  main.c  makefile  sepia.s
ARKO/x86/laby3/: .remove.c.swp  main  main.c  makefile  remove.s
ARKO/x86/rgb_bmp_readwrite/: image.c
PARP/Smalltalk/: main.st
PROI/Project/: .gitignore  CMakeLists.txt  README.md
PROI/Project/examples/: TerrainTest.cpp
PROI/Project/include/Scorched/Bullet/: Bullet.hpp
PROI/Project/include/Scorched/GameController/: GameController.hpp
PROI/Project/include/Scorched/Leaderboards/: Leaderboards.hpp
PROI/Project/include/Scorched/Map/: Map.hpp
PROI/Project/include/Scorched/Shared/: Entity.hpp
PROI/Project/include/Scorched/Tank/: Tank.hpp
PROI/Project/include/Scorched/Terrain/: TerrainTypes.hpp
PROI/Project/src/: Main.cpp  main1.cpp  screen.hpp
PROI/Project/src/Resources/: leaderboards.txt
PROI/Project/src/Scorched/Bullet/: Bullet.cpp  CMakeLists.txt
PROI/Project/src/Scorched/GameController/: CMakeLists.txt  GameController.cpp
PROI/Project/src/Scorched/Leaderboards/: CMakeLists.txt  Leaderboards.cpp
PROI/Project/src/Scorched/Map/: CMakeLists.txt  Map.cpp
PROI/Project/src/Scorched/Shared/: CMakeLists.txt  Entity.cpp
PROI/Project/src/Scorched/Tank/: CMakeLists.txt  Tank.cpp  TankConstants.hpp
PROI/Project/src/Scorched/Terrain/: CMakeLists.txt  Terrain.cpp  Terrain.hpp  TerrainTypes.cpp  Triangulate.cpp  Triangulate.hpp
PROI/Project/test/: test.cpp
PROI/laby/BCD/: CMakeLists.txt  main.cpp
PROI/laby/BCD/BCDtest/: BCDtest.cpp
PROI/laby/BCD/Lib/: BCD.cpp  BCD.h
PROI/laby/Contener/: CMakeLists.txt  README.md  main.cpp
PROI/laby/Contener/Containertest/: ContainerTest.cpp
PROI/laby/Contener/Lib/: Container_and_weight.cpp  Container_and_weight.h
PSI/lab/zad1.1/: Makefile  common.c  common.h  klient_udp.c  klient_udp.py  serwer_udp.c  serwer_udp.py
PSI/lab/zad1.3/: Makefile  common.h  klient_udp.c  serwer_udp.py  struct_parser.py  test_input
PSI/lab/zad2.1/: common.c  common.h  common.py  klient_tcp.c  klient_tcp.py  serwer_tcp.c  serwer_tcp.py
PSI/lab/zad2.2/: Makefile  common.h  common.py  klient_tcp.py  serwer_tcp.c
PSI/lab/zad2.4/: Makefile  common.c  common.h  klient_tcp.c  serwer_tcp.c
PSI/projekt/docker/brama/: Dockerfile  requirements.txt
PSI/projekt/docker/rejestrator/: Dockerfile
PSI/projekt/src/brama/: database.csv  main.py  security.py
PSI/projekt/src/rejestrator/: main.py
PSI/projekt/src/sensor/: main.py
PSI/projekt/src/shared/: common.py  keys.py  retransmit.py  szyfrowanie.py
PSI/projekt/tests/: minimal.sh  stress.sh
PSI/projekt/utils/: build.sh  line-count.sh
PaP/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  mvnw.cmd  pom.xml
PaP/BD1/: DDL_USUS.sql  insert_data.sql  test.sql
PaP/BD1/functions/: functions_tests.sql  group_info.sql  student_info.sql
PaP/BD1/procedures/: close_exchange.sql  procedura__statystyki_zapełnienia_grup.SQL  test_procedures.sql
PaP/BD1/student-import/: example_data.csv  student-import.py
PaP/BD1/triggers/: check_group_size.sql  trigger_tests.sql
PaP/docker/volumes/ldap/ldifs/: db.ldif
PaP/src/main/java/pl/ususweb/usus/: UsusApplication.java  WebSecurityConfig.java
PaP/src/main/java/pl/ususweb/usus/Repository/: ActivityRepository.java  AnnouncementRepository.java  ExchangeOfferRepository.java  FinalGradeSettingsRepository.java  GradeRepository.java  GradedTestRepository.java  GroupRepository.java  MarketRepository.java  StudentRepository.java  TradePeriodRepository.java
PaP/src/main/java/pl/ususweb/usus/controler/: ActivityResponseController.java  AnnouncementResponseController.java  Error.java  ExchangeOfferResponseController.java  FinalGradeResponseController.java  GradedTestResponseController.java  GroupResponseController.java  StudentsResponseController.java  (+1 more)
PaP/src/main/resources/: application.properties
PaP/src/main/resources/templates/: add_activity.html  add_announcement.html  add_exchange_offer.html  add_graded_test.html  add_group.html  add_student.html  add_trade_period.html  allStudents.html  all_activities.html  all_groups_student.html  all_offers.html  all_students.html  all_tests.html  all_tests_student.html  all_trade_periods.html  all_trade_periods_student.html  dashboard.html  dashboard_student.html  edit_final_grade.html  edit_student.html  errors.html  grade_editor.html  group_info.html  login.html  main.html  mainStudent.html  studentview.html
PaP/src/main/resources/templates/CSS/: login.css
SIGK/lab1/: inpainting.ipynb  scaling.ipynb
SIGK/lab2/: note.ipynb
SIGK/lab3/: README.md
SIGK/lab4/: note.ipynb
SIGK/lab5/: note.ipynb
SOI/zad3/: definy.h  main.c  makefile  semafory.c  semafory.h  staff.c  staff.h  usu.c
SOI/zad4/: definy.h  main.c  makefile  monitory.c  monitory.h  staff.c  staff.h
UMA/: eksperymenty.py
WSI/: DSidorcz_lab1a.ipynb  DSidorcz_lab1b.ipynb  DSidorcz_lab2.ipynb  DSidorcz_lab3.ipynb  DSidorcz_lab4.ipynb  DSidorcz_lab5.ipynb  DSidorcz_lab6.ipynb  DSidorcz_lab7.ipynb  connect_four.py
WSI/two_player_games/games/: connect_four.py
skelp_internetowy/: Jenkinsfile  README.md  build.sh  docker-compose.yml  realm-export.json
skelp_internetowy/backend/sklep/: Dockerfile  pom.xml
skelp_internetowy/backend/sklep/src/main/resources/: application.properties
skelp_internetowy/frontend/: package-lock.json  package.json
skelp_internetowy/frontend/public/: index.html  keycloak.json
skelp_internetowy/frontend/src/: App.css  App.js  UserService.js  index.js
skelp_internetowy/frontend/src/routes/: Cart.js  Header.js  Login.js  Logout.js  ProductDetail.js  ProductList.js  Summary.js
skelp_internetowy/infrastructure/: sklep_run.sh  sklep_setup.sh
skelp_internetowy/ngnix/: ngnix.conf
skelp_internetowy/test/: api_test.sh
(+44 files in other folders)
